fixed buying text alignement

--- a/quinzena-4/modulo2/css-bugfixes/index.css
+++ b/quinzena-4/modulo2/css-bugfixes/index.css
@@ -103,7 +103,8 @@ div:last-child {
 }
 
 table {
-    width: 60%;
+    width: 80%;
+    text-align: center;
 }
 
 td button {
